--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="sm-debug">
+       <!-- <div class="sm-debug">
             <div>
                 <div >
                     <div></div>
@@ -25,7 +25,7 @@
                     <div></div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <header class="page-header">
             <div class="container">
                 <nav class="header-menu">
