--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-       <!-- <div class="sm-debug">
+ <!--       <div class="sm-debug">
             <div>
                 <div >
                     <div></div>
@@ -29,7 +29,7 @@
         <header class="page-header">
             <div class="container">
                 <nav class="header-menu">
-                    <button class="header-menu__toggle" type="button" data-toggle="collapse" >
+                    <button class="header-menu__toggle" type="button">
                         <span>Menu</span>
                     </button>
                     <ul class="header-menu__list nav">
@@ -66,75 +66,83 @@
                             <li class="service-list__item">
                                 <div class="service-item">
                                     <h3 class="service-item__title">Management</h3>
-                                    <p class="service-item__paragraph">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
+                                    <p>Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
                                 </div>
                             </li>
                             <li class="service-list__item">
                                 <div class="service-item">
                                     <h3 class="service-item__title">UI / UX Design</h3>
-                                    <p class="service-item__paragraph">Lorem ipsum dolor sitea amet, zixf consяяeit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor sit amet,</p>
+                                    <p>Lorem ipsum dolor sitea amet, zixf consяяeit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor sit amet,</p>
                                 </div>
                             </li>
                             <li class="service-list__item">
                                 <div class="service-item">
                                     <h3 class="service-item__title">Logo / Branding</h3>
-                                    <p class="service-item__paragraph">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
+                                    <p>Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
                                 </div>
                             </li>
                             <li class="service-list__item">
                                 <div class="service-item">
                                     <h3 class="service-item__title">Animation</h3>
-                                    <p class="service-item__paragraph">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
+                                    <p>Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
                                 </div>
                             </li>
                         </ul>
                     </div>
                 </section>
-                <section class="products">
+                <section class="portfolio">
                     <div class="header--center">
-                        <h2 class="products__title">Feature products</h2>
-                        <p class="products__subtitle">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor incididunt ut labore et.</p>
+                        <h2 class="portfolio__title">Feature portfolio</h2>
+                        <p class="portfolio__subtitle">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor incididunt ut labore et.</p>
                     </div>
                     <ul class="filter filter--products">
-                        <li class="filter__item"><a href="#" class="filter__link filter__link--active">All</a></li>
+                        <li class="filter__item"><a href="#" class="filter__link active">All</a></li>
                         <li class="filter__item"><a href="#" class="filter__link">Print Template</a></li>
                         <li class="filter__item"><a href="#" class="filter__link">Web Template</a></li>
                         <li class="filter__item"><a href="#" class="filter__link">User Interface</a></li>
                         <li class="filter__item"><a href="#" class="filter__link">Mock-Up</a></li>
                     </ul>
-                    <div class="products-list">
-                        <div class="wrap">
-                            <div class="products-list__item">
-                                <div class="products-item">
-                                    <img src="img/preview.jpg" class="products-item__img" />
+                    <div class="wrap">
+                        <ul class="portfolio-list">
+                            <li class="portfolio-list__item">
+                                <div class="portfolio-item">
+                                    <img src="img/preview.jpg" class="portfolio-item__img" />
+                                    <div class="portfolio-item__desc"> <a href="#" class="btn">More</a></div>
                                 </div>
-                            </div>
-                            <div class="products-list__item">
-                                <div class="products-item">
-                                    <img src="img/preview.jpg" class="products-item__img" />
+                            </li>
+                            <li class="portfolio-list__item">
+                                <div class="portfolio-item">
+                                    <img src="img/preview-2.jpg" class="portfolio-item__img" />
+                                    <div class="portfolio-item__desc"> <a href="#" class="btn">More</a></div>
                                 </div>
-                            </div>
-                            <div class="products-list__item">
-                                <div class="products-item">
-                                    <img src="img/preview.jpg" class="products-item__img" />
+                            </li>
+                            <li class="portfolio-list__item">
+                                <div class="portfolio-item">
+                                    <img src="img/preview-3.jpg" class="portfolio-item__img" />
+                                    <div class="portfolio-item__desc">
+                                        <a href="#" class="btn">More</a>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="products-list__item">
-                                <div class="products-item">
-                                    <img src="img/preview.jpg" class="products-item__img" />
+                            </li>
+                            <li class="portfolio-list__item">
+                                <div class="portfolio-item">
+                                    <img src="img/preview.jpg" class="portfolio-item__img" />
+                                    <div class="portfolio-item__desc"> <a href="#" class="btn">More</a></div>
                                 </div>
-                            </div>
-                            <div class="products-list__item">
-                                <div class="products-item">
-                                    <img src="img/preview.jpg" class="products-item__img" />
+                            </li>
+                            <li class="portfolio-list__item">
+                                <div class="portfolio-item">
+                                    <img src="img/preview-2.jpg" class="portfolio-item__img" />
+                                    <div class="portfolio-item__desc"> <a href="#" class="btn">More</a></div>
                                 </div>
-                            </div>
-                            <div class="products-list__item">
-                                <div class="products-item">
-                                    <img src="img/preview.jpg" class="products-item__img" />
+                            </li>
+                            <li class="portfolio-list__item">
+                                <div class="portfolio-item">
+                                    <img src="img/preview.jpg" class="portfolio-item__img" />
+                                    <div class="portfolio-item__desc"> <a href="#" class="btn">More</a></div>
                                 </div>
-                            </div>
-                        </div>
+                            </li>
+                        </ul>
                     </div>
                 </section>
                 <section class="team">
@@ -176,6 +184,23 @@
             </div>
         </footer>
 
-        <script type="text/javascript"></script>
+        <script type="text/javascript">
+           (function(){
+                            document.addEventListener("DOMContentLoaded", function () {
+                var btnMenu = document.querySelector('.header-menu__toggle');
+                if (btnMenu.addEventListener) {                    // For all major browsers, except IE 8 and earlier
+                    btnMenu.addEventListener("click", openNav);
+                } else if (btnMenu.attachEvent) {                  // For IE 8 and earlier versions
+                    btnMenu.attachEvent("onclick", openNav);
+                }
+                function openNav() {
+                    var menu = document.querySelector('.header-menu');
+                    menu.classList.toggle('open');
+                }
+            });
+            })();
+
+
+        </script>
     </body>
 </html>
