--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                         <span>Menu</span>
                     </button>
                     <ul class="header-menu__list nav">
-                        <li class="header-menu__item"><a href="/" class="header-menu__link">Home</a></li>
+                        <li class="header-menu__item"><a href="#" class="header-menu__link" data-scroll-target="#header">Home</a></li>
                         <li class="header-menu__item"><a href="#" class="header-menu__link" data-scroll-target="#portfolio">Portfolio</a></li>
                         <li class="header-menu__item"><a href="#" class="header-menu__link" data-scroll-target="#about">About us</a></li>
                         <li class="header-menu__item"><a href="#" class="header-menu__link" data-scroll-target="#contacts">Contact</a></li>
                     </ul>
                 </nav>
-                <section class="header-content">
+                <section class="header-content" id="header">
                     <div class="header-content__block">
                         <h1 class="header-content__title">Our strong organaisation</h1>
                         <p class="header-content__paragraph">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt  ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt.</p>
