--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="format-detection" content="telephone=no">
         <title>Landing Template</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    <!--    <div class="sm-debug">
-            <div>
-                <div >
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
-            </div>
-        </div> -->
+        <!-- <div class="sm-debug">
+             <div>
+                 <div >
+                     <div></div>
+                     <div></div>
+                     <div></div>
+                     <div></div>
+                     <div></div>
+                     <div></div>
+                     <div></div>
+                     <div></div>
+                     <div></div>
+                     <div></div>
+                     <div></div>
+                     <div></div>
+                 </div>
+             </div>
+         </div> -->
         <header class="page-header">
             <div class="container">
                 <nav class="header-menu">
@@ -99,55 +100,51 @@
                         <h2 class="portfolio__title">Feature portfolio</h2>
                         <p class="portfolio__subtitle">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor incididunt ut labore et.</p>
                     </div>
-                    <ul class="filter filter--products">
+                    <ul class="filter">
                         <li class="filter__item"><a href="#" class="filter__link active">All</a></li>
                         <li class="filter__item"><a href="#" class="filter__link">Print Template</a></li>
                         <li class="filter__item"><a href="#" class="filter__link">Web Template</a></li>
                         <li class="filter__item"><a href="#" class="filter__link">User Interface</a></li>
                         <li class="filter__item"><a href="#" class="filter__link">Mock-Up</a></li>
                     </ul>
-                    <div class="wrap">
-                        <ul class="portfolio-list">
-                            <li class="portfolio-list__item">
-                                <div class="portfolio-item">
-                                    <img src="img/preview.jpg" class="portfolio-item__img" />
-                                    <div class="portfolio-item__desc"> <a href="#" class="btn">More</a></div>
-                                </div>
-                            </li>
-                            <li class="portfolio-list__item">
-                                <div class="portfolio-item">
-                                    <img src="img/preview-2.jpg" class="portfolio-item__img" />
-                                    <div class="portfolio-item__desc"> <a href="#" class="btn">More</a></div>
-                                </div>
-                            </li>
-                            <li class="portfolio-list__item">
-                                <div class="portfolio-item">
-                                    <img src="img/preview-3.jpg" class="portfolio-item__img" />
-                                    <div class="portfolio-item__desc">
-                                        <a href="#" class="btn">More</a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="portfolio-list__item">
-                                <div class="portfolio-item">
-                                    <img src="img/preview.jpg" class="portfolio-item__img" />
-                                    <div class="portfolio-item__desc"> <a href="#" class="btn">More</a></div>
-                                </div>
-                            </li>
-                            <li class="portfolio-list__item">
-                                <div class="portfolio-item">
-                                    <img src="img/preview-2.jpg" class="portfolio-item__img" />
-                                    <div class="portfolio-item__desc"> <a href="#" class="btn">More</a></div>
-                                </div>
-                            </li>
-                            <li class="portfolio-list__item">
-                                <div class="portfolio-item">
-                                    <img src="img/preview.jpg" class="portfolio-item__img" />
-                                    <div class="portfolio-item__desc"> <a href="#" class="btn">More</a></div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+                    <ul class="portfolio-list">
+                        <li class="portfolio-list__item">
+                            <div class="portfolio-item">
+                                <img src="img/preview.jpg" class="portfolio-item__img" />
+                                <a href="#" class="portfolio-item__desc"><span class="btn">More</span></a>
+                            </div>
+                        </li>
+                        <li class="portfolio-list__item">
+                            <div class="portfolio-item">
+                                <img src="img/preview-2.jpg" class="portfolio-item__img" />
+                                <a href="#" class="portfolio-item__desc"> <div class="btn">More</div></a>
+                            </div>
+                        </li>
+                        <li class="portfolio-list__item">
+                            <div class="portfolio-item">
+                                <img src="img/preview-3.jpg" class="portfolio-item__img" />
+                                <a href="#" class="portfolio-item__desc"> <div class="btn">More</div></a>
+                            </div>
+                        </li>
+                        <li class="portfolio-list__item">
+                            <div class="portfolio-item">
+                                <img src="img/preview.jpg" class="portfolio-item__img" />
+                                <a href="#" class="portfolio-item__desc"> <div class="btn">More</div></a>
+                            </div>
+                        </li>
+                        <li class="portfolio-list__item">
+                            <div class="portfolio-item">
+                                <img src="img/preview-2.jpg" class="portfolio-item__img" />
+                                <a href="#" class="portfolio-item__desc"> <div class="btn">More</div></a>
+                            </div>
+                        </li>
+                        <li class="portfolio-list__item">
+                            <div class="portfolio-item">
+                                <img src="img/preview.jpg" class="portfolio-item__img" />
+                                <a href="#" class="portfolio-item__desc"> <div class="btn">More</div></a>
+                            </div>
+                        </li>
+                    </ul>
                 </section>
                 <section class="team" id="about">
                     <div class="team-header">
@@ -194,7 +191,6 @@
             </div>
             <section class="subscription">
                 <div class="container">
-                    <div class="wrap">
                         <div class="header--center">
                             <h2 class="subscription__title">Design tips, tricks, and freebies. Delivered weekly.</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
@@ -203,26 +199,61 @@
                             <input class="form-subscribe__input form-control" type="text" placeholder="Email Address..." />
                             <input class="form-subscribe__submit btn btn-lg" type="submit" value="Subscribe" />
                         </form>
-                    </div>
                 </div>
             </section>
             <section class="contact" id="contacts">
-                <div class="container">
+                <div class="contact-header container">
                     <h2 class="contact__title">Get in touch</h2>
                     <p class="contact__subtitle">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.ur adipis cing elit, sed do eiusmod tempor incididunt ut labore et. ur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-                    <form class="contact-form">
-
-                    </form>
-                    <div class="contact-info">
+                </div>
+                <div class="contact-content">
+                    <div class="container">
+                        <form id="contactForm" class="contact-form" method="post">
+                            <input type="text" name="Name" class="form-control" placeholder="Name" />
+                            <input type="text" name="Email" class="form-control" placeholder="Your Mail" />
+                            <textarea name="Message" class="form-control" placeholder="Type your message"></textarea>
+                            <input type="submit" class="btn" value="Send message" />
+                        </form>
+                        <div class="contact-info">
+                            <div class="contact-info__title">Contact info</div>
+                            <div class="contact-info__address">Jalalabad 24 / A, Ambaarkhana, Sylhet, Bangladesh</div>
+                            <a href="mailto:redwan@deviserweb.com" class="contact-info__mail">redwan@deviserweb.com</a>
+                            <a href="tel:(+88) 017 617 46373" class="contact-info__phone">(+88) 017 617 46373</a>
+                        </div>
 
                     </div>
-
                 </div>
             </section>
         </main>
         <footer class="page-footer">
             <div class="container">
                 <div class="copyright">Copyright @Junaed 2016, All rights reserved.</div>
+                <div class="social-links">
+                    <a href="#">
+                        <span class="fa-stack fa-inverse">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-twitter fa-stack-1x icon-social"></i>
+                        </span>
+                    </a>
+                    <a href="#">
+                        <span class="fa-stack fa-inverse">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-linkedin fa-stack-1x icon-social"></i>
+                        </span>
+                    </a>
+                    <a href="#">
+                        <span class="fa-stack fa-inverse">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-google-plus fa-stack-1x icon-social"></i>
+                        </span>
+                    </a>
+                    <a href="#">
+                        <span class="fa-stack fa-inverse">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-facebook fa-stack-1x icon-social"></i>
+                        </span>
+                    </a>
+                </div>
             </div>
         </footer>
 
@@ -241,6 +272,11 @@
                     var menu = document.querySelector('.header-menu');
                     menu.classList.toggle('open');
                 }
+
+                var form = document.querySelector('#contactForm');
+                form.addEventListener('submit', function (e) {
+                    e.preventDefault();
+                });
             });
 
 
