--- a/index.html
+++ b/index.html
@@ -7,26 +7,13 @@
         <meta name="format-detection" content="telephone=no">
         <title>Landing Template</title>
         <link href="css/style.css" rel="stylesheet">
+        <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+          <script src="scripts/html5shiv.js"></script>
+        <![endif]-->
     </head>
     <body>
-     <!--  <div class="sm-debug">
-             <div>
-                 <div >
-                     <div></div>
-                     <div></div>
-                     <div></div>
-                     <div></div>
-                     <div></div>
-                     <div></div>
-                     <div></div>
-                     <div></div>
-                     <div></div>
-                     <div></div>
-                     <div></div>
-                     <div></div>
-                 </div>
-             </div>
-         </div> -->
+
         <header class="page-header">
             <div class="container">
                 <nav class="header-menu">
@@ -34,17 +21,17 @@
                         <span>Menu</span>
                     </button>
                     <ul class="header-menu__list nav">
-                        <li class="header-menu__item"><a href="#" class="header-menu__link" data-scroll-target="#header">Home</a></li>
-                        <li class="header-menu__item"><a href="#" class="header-menu__link" data-scroll-target="#portfolio">Portfolio</a></li>
-                        <li class="header-menu__item"><a href="#" class="header-menu__link" data-scroll-target="#about">About us</a></li>
-                        <li class="header-menu__item"><a href="#" class="header-menu__link" data-scroll-target="#contacts">Contact</a></li>
+                        <li class="header-menu__item"><a href="#header" class="header-menu__link" title="Home">Home</a></li>
+                        <li class="header-menu__item"><a href="#portfolio" class="header-menu__link" title="Portfolio" data-scroll-target="#portfolio">Portfolio</a></li>
+                        <li class="header-menu__item"><a href="#about" class="header-menu__link" title="About our team" data-scroll-target="#about">About us</a></li>
+                        <li class="header-menu__item"><a href="#contacts" class="header-menu__link" title="Contact us" data-scroll-target="#contacts">Contact</a></li>
                     </ul>
                 </nav>
                 <section class="header-content" id="header">
                     <div class="header-content__block">
                         <h1 class="header-content__title">Our strong organaisation</h1>
                         <p class="header-content__subtitle">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt  ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt.</p>
-                        <div><a href="#" class="btn">Contact Us</a></div>
+                        <div><a href="#contacts" class="btn" data-scroll-target="#contacts" title="Contact us">Contact Us</a></div>
                     </div>
                     <div class="header-content__block">
                         <div class="video-block">
@@ -60,7 +47,7 @@
                     <div class="service-block service-block__content">
                         <h2 class="service__title">Do you know we can provide for you ?</h2>
                         <p class="service__subtitle">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ni ipsum dolor sit amet, consectetur adipis cing elit, ed doi eiusmod tempor incididunt ut labore et.</p>
-                        <a href="#" class="btn btn--service">Contact Us</a>
+                        <a href="#contacts" class="btn btn-service" data-scroll-target="#contacts" title="Contact us">Contact Us</a>
                     </div>
                     <div class="service-block">
                         <ul class="service-list">
@@ -110,37 +97,37 @@
                     <ul class="portfolio-list">
                         <li class="portfolio-list__item">
                             <div class="portfolio-item">
-                                <img src="img/preview.jpg" class="portfolio-item__img" />
+                                <img src="img/preview.jpg" class="portfolio-item__img" alt="portfolio-image"/>
                                 <a href="#" class="portfolio-item__desc"><span class="btn">More</span></a>
                             </div>
                         </li>
                         <li class="portfolio-list__item">
                             <div class="portfolio-item">
-                                <img src="img/preview-2.jpg" class="portfolio-item__img" />
+                                <img src="img/preview-2.jpg" class="portfolio-item__img" alt="portfolio-image"/>
                                 <a href="#" class="portfolio-item__desc"> <div class="btn">More</div></a>
                             </div>
                         </li>
                         <li class="portfolio-list__item">
                             <div class="portfolio-item">
-                                <img src="img/preview-3.jpg" class="portfolio-item__img" />
+                                <img src="img/preview-3.jpg" class="portfolio-item__img" alt="portfolio-image"/>
                                 <a href="#" class="portfolio-item__desc"> <div class="btn">More</div></a>
                             </div>
                         </li>
                         <li class="portfolio-list__item">
                             <div class="portfolio-item">
-                                <img src="img/preview.jpg" class="portfolio-item__img" />
+                                <img src="img/preview.jpg" class="portfolio-item__img" alt="portfolio-image"/>
                                 <a href="#" class="portfolio-item__desc"> <div class="btn">More</div></a>
                             </div>
                         </li>
                         <li class="portfolio-list__item">
                             <div class="portfolio-item">
-                                <img src="img/preview-2.jpg" class="portfolio-item__img" />
+                                <img src="img/preview-2.jpg" class="portfolio-item__img" alt="portfolio-image"/>
                                 <a href="#" class="portfolio-item__desc"> <div class="btn">More</div></a>
                             </div>
                         </li>
                         <li class="portfolio-list__item">
                             <div class="portfolio-item">
-                                <img src="img/preview.jpg" class="portfolio-item__img" />
+                                <img src="img/preview.jpg" class="portfolio-item__img" alt="portfolio-image" />
                                 <a href="#" class="portfolio-item__desc"> <div class="btn">More</div></a>
                             </div>
                         </li>
@@ -172,15 +159,12 @@
                                         <div class="info">1</div>
                                     </li>
                                     <li class="team-list__item">
-
                                         <div class="info">2</div>
                                     </li>
                                     <li class="team-list__item">
-
                                         <div class="info">3</div>
                                     </li>
                                     <li class="team-list__item">
-
                                         <div class="info">4</div>
                                     </li>
                                 </ul>
@@ -191,14 +175,14 @@
             </div>
             <section class="subscription">
                 <div class="container">
-                        <div class="header--center">
-                            <h2 class="subscription__title">Design tips, tricks, and freebies. Delivered weekly.</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
-                        </div>
-                        <form class="form-subscribe">
-                            <input class="form-subscribe__input form-control" type="email" name="Email" placeholder="Email Address..." data-pattern = "email" />
-                            <input class="form-subscribe__submit btn btn-lg" type="submit" value="Subscribe" />
-                        </form>
+                    <div class="header--center">
+                        <h2 class="subscription__title">Design tips, tricks, and freebies. Delivered weekly.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
+                    </div>
+                    <form class="form-subscribe">
+                        <input class="form-subscribe__input form-control" type="email" name="Email" placeholder="Email Address..." data-pattern="email" />
+                        <input class="form-subscribe__submit btn btn-lg" type="submit" value="Subscribe" />
+                    </form>
                 </div>
             </section>
             <section class="contact" id="contacts">
@@ -229,25 +213,25 @@
             <div class="container">
                 <div class="copyright">Copyright @Junaed 2016, All rights reserved.</div>
                 <div class="social-links">
-                    <a href="#">
+                    <a href="#" title="Twitter">
                         <span class="fa-stack fa-inverse">
                             <i class="fa fa-circle fa-stack-2x"></i>
                             <i class="fa fa-twitter fa-stack-1x icon-social"></i>
                         </span>
                     </a>
-                    <a href="#">
+                    <a href="#" title="LinkedIn">
                         <span class="fa-stack fa-inverse">
                             <i class="fa fa-circle fa-stack-2x"></i>
                             <i class="fa fa-linkedin fa-stack-1x icon-social"></i>
                         </span>
                     </a>
-                    <a href="#">
+                    <a href="#" title="Google+">
                         <span class="fa-stack fa-inverse">
                             <i class="fa fa-circle fa-stack-2x"></i>
                             <i class="fa fa-google-plus fa-stack-1x icon-social"></i>
                         </span>
                     </a>
-                    <a href="#">
+                    <a href="#" title="Facebook">
                         <span class="fa-stack fa-inverse">
                             <i class="fa fa-circle fa-stack-2x"></i>
                             <i class="fa fa-facebook fa-stack-1x icon-social"></i>
@@ -256,28 +240,10 @@
                 </div>
             </div>
         </footer>
-
+        <div class="btn btn-top">
+            <i class="fa fa-angle-double-up fa-2x" title="Up"></i>
+        </div>
         <script src="scripts/jquery-3.2.1.js"></script>
         <script src="scripts/scripts.js"></script>
-<!--     <script type="text/javascript">
-            document.addEventListener("DOMContentLoaded", function () {
-                var btnMenu = document.querySelector('.header-menu__toggle');
-                if (btnMenu.addEventListener) {                    // For all major browsers, except IE 8 and earlier
-                    btnMenu.addEventListener("click", openNav);
-                } else if (btnMenu.attachEvent) {                  // For IE 8 and earlier versions
-                    btnMenu.attachEvent("onclick", openNav);
-                }
-                function openNav() {
-                    var menu = document.querySelector('.header-menu');
-                    menu.classList.toggle('open');
-                }
-
-                var form = document.querySelector('#contactForm');
-                form.addEventListener('submit', function (e) {
-                    e.preventDefault();
-                });
-            });
-
-        </script> -->
     </body>
 </html>
