--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
                         <span>Menu</span>
                     </button>
                     <ul class="header-menu__list nav">
-                        <li class="header-menu__item"><a href="#header" class="header-menu__link" title="Home">Home</a></li>
-                        <li class="header-menu__item"><a href="#portfolio" class="header-menu__link" title="Portfolio" data-scroll-target="#portfolio">Portfolio</a></li>
-                        <li class="header-menu__item"><a href="#about" class="header-menu__link" title="About our team" data-scroll-target="#about">About us</a></li>
-                        <li class="header-menu__item"><a href="#contacts" class="header-menu__link" title="Contact us" data-scroll-target="#contacts">Contact</a></li>
+                        <li class="header-menu__item"><a href="#header" class="header-menu__link">Home</a></li>
+                        <li class="header-menu__item"><a href="#portfolio" class="header-menu__link" data-scroll-target="#portfolio">Portfolio</a></li>
+                        <li class="header-menu__item"><a href="#about" class="header-menu__link" data-scroll-target="#about">About us</a></li>
+                        <li class="header-menu__item"><a href="#contacts" class="header-menu__link" data-scroll-target="#contacts">Contact</a></li>
                     </ul>
                 </nav>
                 <section class="header-content" id="header">
                     <div class="header-content__block">
                         <h1 class="header-content__title">Our strong organaisation</h1>
                         <p class="header-content__subtitle">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt  ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt.</p>
-                        <div><a href="#contacts" class="btn" data-scroll-target="#contacts" title="Contact us">Contact Us</a></div>
+                        <div><a href="#contacts" class="btn" data-scroll-target="#contacts">Contact Us</a></div>
                     </div>
                     <div class="header-content__block">
                         <div class="video-block">
@@ -47,7 +47,7 @@
                     <div class="service-block service-block__content">
                         <h2 class="service__title">Do you know we can provide for you ?</h2>
                         <p class="service__subtitle">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ni ipsum dolor sit amet, consectetur adipis cing elit, ed doi eiusmod tempor incididunt ut labore et.</p>
-                        <a href="#contacts" class="btn btn-service" data-scroll-target="#contacts" title="Contact us">Contact Us</a>
+                        <a href="#contacts" class="btn btn-service" data-scroll-target="#contacts">Contact Us</a>
                     </div>
                     <div class="service-block">
                         <ul class="service-list">
@@ -127,7 +127,7 @@
                         </li>
                         <li class="portfolio-list__item">
                             <div class="portfolio-item">
-                                <img src="img/preview.jpg" class="portfolio-item__img" alt="portfolio-image" />
+                                <img src="img/preview-3.jpg" class="portfolio-item__img" alt="portfolio-image" />
                                 <a href="#" class="portfolio-item__desc"> <div class="btn">More</div></a>
                             </div>
                         </li>
@@ -141,7 +141,7 @@
                     <div class="team-content">
                         <div class="wrap">
                             <div class="team__img-block">
-                                <img src="img/girl.jpeg" alt=""/>
+                                <img src="img/girl.jpg" alt=""/>
                             </div>
                             <div class="team__info-block">
                                 <div class="team-item__info">
